CSS fix for /login on iPhone6 screen sizes

--- a/HTTPRoot/login/login.scss
+++ b/HTTPRoot/login/login.scss
@@ -171,8 +171,9 @@ body {
 
 @media only screen and (max-width: 900px) {
 
-    #login {
-        width:              45vw;
+    #logindiv {
+        width:      90vw;
+        margin-top: -50%;
     }
 
 }
